--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-  "java.project.referencedLibraries": [
-    "/opt/homebrew/opt/tomcat/libexec/lib/servlet-api.jar",
-    "WEB-INF/lib/mysql-connector-j-8.4.0.jar"
+  "java.project.referencedLibraries": [],
+  "java.project.sourcePaths": [
+    ".",
+    "src/main/java",
+    "src/main/java/com/petcare"
   ]
 }
